workspace = { members = ["css_rules"] }
[package]
name = "dioxuscss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.18"
quote = "1.0.35"
syn = "2.0.50"
css_rules = { path = "./css_rules" }

[lib]
# proc-macro = true
