[package]
name = "css_rules"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
quote = "1.0.35"
regex = "1.10.3"
syn = { version = "1.0", features = ["full"] }


[lib]
proc-macro = true
